Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15286

Clang: Template parameters for function parameters not shown in function call completion

XMLWordPrintable

      class Element {};
      
      template <typename T>
      class Container {
          T member;
      };
      
      void f(const Container<Element> &strings)
      {
          f(<COMPLETE-HERE>)
      }
      

        For Gerrit Dashboard: QTCREATORBUG-15286
        # Subject Branch Project Status CR V

            kosjar Nikolai Kosjar
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes