Clang: Fix displaying template parameters

...in the function call completion tooltip.

We did not escape the HTML.

Change-Id: I5c27e5c29c1b29117201e933ac172c98792cef2b
Task-number: QTCREATORBUG-15286
Reviewed-by: Marco Bubke <marco.bubke@theqtcompany.com>
Reviewed-by: Christian Kandeler <christian.kandeler@theqtcompany.com>